--- a/index.html
+++ b/index.html
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Snake Game</title>
+  <title>Portföy - Mertcan Uçar</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
-  <script src="game.js"></script>
+  <header>
+    <div class="navbar">
+      <a href="#home">Ana Sayfa</a>
+      <a href="#portfolio">Portföy</a>
+      <a href="#about">Hakkımda</a>
+      <a href="#contact">İletişim</a>
+    </div>
+    <section id="home" class="hero">
+      <h1>Merhaba, Ben Mertcan Uçar</h1>
+      <p>Yaratıcı Web Tasarımcı ve Geliştirici</p>
+    </section>
+  </header>
+
+  <section id="portfolio">
+    <h2>Portföyüm</h2>
+    <div class="portfolio-grid">
+      <div class="portfolio-item">
+        <a href="https://fr0sty-m.github.io/snake-game">
+          <img src="./assets/snake-game.png">
+          <h3>Yılan Oyunu</h3>
+          <p>Yaptığım küçük bir "snake" klonu</p>
+        </a>
+      </div>
+      <div class="portfolio-item">
+        <img src="sandbox-game.jpg" alt="Sandbox">
+        <h3>Sandbox</h3>
+        <p>Proje açıklaması buraya gelecek.</p>
+      </div>
+      <!-- other projects -->
+    </div>
+  </section>
+
+  <section id="about">
+    <h2>Hakkımda</h2>
+    <p>Ben Mertcan Uçar, bir web geliştiricisi ve tasarımcıyım. [Eğitim ve Deneyimleriniz hakkında kısa bir açıklama].
+    </p>
+  </section>
+
+  <section id="contact">
+    <h2>İletişim</h2>
+    <form action="#" method="POST">
+      <label for="name">Adınız:</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">E-posta:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="message">Mesajınız:</label>
+      <textarea id="message" name="message" required></textarea>
+
+      <button type="submit">Gönder</button>
+    </form>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Mertcan Uçar - Tüm hakları saklıdır.</p>
+  </footer>
 </body>
 
 </html>
