--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <section id="home" class="hero">
       <h1>Merhaba, Ben Mertcan Uçar</h1>
-      <p>Yaratıcı Web Tasarımcı ve Geliştirici</p>
+      <p>2D/3D Tasarımcı ve Yazılım Geliştiricisi</p>
     </section>
   </header>
 
@@ -27,15 +27,17 @@
     <div class="portfolio-grid">
       <div class="portfolio-item">
         <a href="https://fr0sty-m.github.io/snake-game">
-          <img src="./assets/snake-game.png">
+          <img src="./assets/snake-game.png" alt="Snake Game">
           <h3>Yılan Oyunu</h3>
           <p>Yaptığım küçük bir "snake" klonu</p>
         </a>
       </div>
       <div class="portfolio-item">
-        <img src="sandbox-game.jpg" alt="Sandbox">
-        <h3>Sandbox</h3>
-        <p>Proje açıklaması buraya gelecek.</p>
+        <a href="https://fr0sty-m.github.io/sandbox">
+          <img src="sandbox-game.jpg" alt="Sandbox">
+          <h3>Sandbox</h3>
+          <p>Çeşitli elementlerin simülasyonu</p>
+        </a>
       </div>
       <!-- other projects -->
     </div>
